--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
               <li><a href="products.html">Products</a></li>
 			  <li><a href="about.html">About</a></li>
             </ul>
+			
+			<ul class="nav pull-right">
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Your Account<b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><a href="#">Login</a></li>
+						<li><a href="#">Profile</a></li>
+						<li><a href="#">Cart</a></li>
+						
+				</li>
+				
+			</ul>
+			
           </div><!--/.nav-collapse -->
         </div>
       </div>
