--- a/hero.html
+++ b/hero.html
@@ -69,42 +69,11 @@
     <div class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
-	  <div class="carousel slide" id="home-carousel">
-		  <div class="carousel-inner">
-			  
-			  <div class="item active">
-	  <img src="img/butterfly.jpg" alt="butterfly" />
-	  <div class="carousel-caption">
-		  <p>Cation content here1</p>
-	  </div>
-  </div>
-  
-  <div class="item">
-	  <img src="img/colors.jpg" alt="colors" />
-	  <div class="carousel-caption">
-		  <p>Cation content here2</p>
-	  </div>
-  </div>
-  <div class="item">
-	  <img src="img/galaxies.jpg" alt="galaxies" />
-	  <div class="carousel-caption">
-		  <p>Cation content here3</p>
-	  </div>
-  </div>
-  
-  <div class="item">
-	  <img src="img/jupiter.jpg" alt="jupiter" />
-	  <div class="carousel-caption">
-		  <p>Cation content here4</p>
-	  </div>
-  </div>
-  
-  </div><!-- .carousel-inner -->
-  
-  <a class="carousel-control left" href="#home-carousel" data-slide="prev">&lsaquo;</a>
-  <a class="carousel-control right" href="#home-carousel" data-slide="next">&rsaquo;</a>
-</div><!-- .carousel -->
- 
+      <div class="hero-unit">
+        <h1>Welcome to my site!<small>I think you'll like it.</small></h1>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+      </div>
 
       <!-- Example row of columns -->
       <div class="row">
@@ -139,12 +108,6 @@
     <script src="js/jquery-1.8.3.min.js"></script>
 	 <script src="js/bootstrap.min.js"></script>
  
-	 <script>
-	 $(document).ready(function(){
-	 	
-		 $('.carousel').carousel();
-	 }); //end document.ready
-	 </script>
 
   </body>
 </html>
